crates/ir/tests/snapshots/lower_test__json__from_json_bool.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module json__from_json_bool

import core/peek/peek as peek(h): h
import core/list/last as last(List[u3]): Option[u3]
import core/list/sort_by as sort_by(List[z5], (z5) -> o5): List[z5]
import core/list/filter as filter(List[j1], (j1) -> Bool): List[j1]
import core/list/fold as fold(List[w1], y1, (y1, w1) -> y1): y1
import core/list/map as map(List[y], (y) -> a1): List[a1]
import core/vec/to_list as to_list(Vec[c8]): List[c8]
import core/io/println as println(o): Unit
import core/option/Some as Some(e): Option[e]
import core/result/Ok as Ok(g): Result[f, g]
import core/result/Err as Err(f): Result[f, g]
import core/list/Cons as Cons(h, List[h]): List[h]
import core/json/JBool as JBool(Bool): Json
import core/json/JNum as JNum(Float): Json
import core/json/JStr as JStr(String): Json
import core/json/JArr as JArr(List[Json]): Json
import core/json/JObj as JObj(Map[String, Json]): Json
declare println: (o) -> Unit

fn main() -> Unit =
  let v1: ~Json = construct Json::JBool#1(true)
  let v2: Dict[core/json.FromJson, Bool] = get_dict core/json.FromJson[Bool]
  let v0: Result[String, Bool] = trait_call core/json.FromJson.from_json(v2, v1)
  switch v0 {
    0 (v3: Bool) ->
      let v4: Dict[core/show.Show, Bool] = get_dict core/show.Show[Bool]
      let v5: Unit = call println(v4, v3)
      v5
    1 (v6: String) ->
      let v7: Dict[core/show.Show, String] = get_dict core/show.Show[String]
      let v8: Unit = call println(v7, v6)
      v8
  }
