crates/ir/tests/snapshots/lower_test__json__from_json_map.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module json__from_json_map

import core/peek/peek as peek(h) -> h
import core/list/last as last(List[u3]) -> Option[u3]
import core/list/sort_by as sort_by(List[z5], (z5) -> o5) -> List[z5]
import core/list/filter as filter(List[j1], (j1) -> Bool) -> List[j1]
import core/list/fold as fold(List[w1], y1, (y1, w1) -> y1) -> y1
import core/list/map as map(List[y], (y) -> a1) -> List[a1]
import core/vec/to_list as to_list(Vec[c8]) -> List[c8]
import core/io/println as println(m) -> Unit
import core/option/Some as Some(e) -> Option[e]
import core/result/Ok as Ok(g) -> Result[f, g]
import core/result/Err as Err(f) -> Result[f, g]
import core/list/Cons as Cons(h, List[h]) -> List[h]
import core/map/get as get(Map[h10, t10], h10) -> Option[t10]
import core/json/JNum as JNum(Float) -> Json
import core/json/JObj as JObj(Map[String, Json]) -> Json
import core/json/JBool as JBool(Bool) -> Json
import core/json/JStr as JStr(String) -> Json
import core/json/JArr as JArr(List[Json]) -> Json
import core/map/from_list as from_list(List[(v13, w13)]) -> Map[v13, w13]
declare from_list: (List[(v13, w13)]) -> Map[v13, w13]
declare get: (Map[h10, t10], h10) -> Option[t10]
declare println: (m) -> Unit

fn main() -> Unit =
  let v1: ~Json = construct Json::JNum#2(42.0)
  let v2: (~String, ~Json) = tuple("x", v1)
  let v3: ~List[(~String, ~Json)] = construct List::Nil#1()
  let v4: ~List[(~String, ~Json)] = construct List::Cons#0(v2, v3)
  let v5: Dict[core/eq.Eq, String] = get_dict core/eq.Eq[String]
  let v6: Dict[core/hash.Hash, String] = get_dict core/hash.Hash[String]
  let v7: Map[String, Json] = call from_list(v5, v6, v4)
  let v0: ~Json = construct Json::JObj#5(v7)
  let v9: Dict[core/json.FromJson, Int] = get_dict core/json.FromJson[Int]
  let v10: Dict[core/json.FromJson, Map[String, Int]] = make_dict core/json.FromJson[Map[String, Int]](v9)
  let v8: Result[String, Map[String, Int]] = trait_call core/json.FromJson.from_json(v10, v0)
  switch v8 {
    0 (v11: Map[String, Int]) ->
      let v12: Dict[core/eq.Eq, String] = get_dict core/eq.Eq[String]
      let v13: Dict[core/hash.Hash, String] = get_dict core/hash.Hash[String]
      let v14: Option[Int] = call get(v12, v13, v11, "x")
      switch v14 {
        0 (v15: Int) ->
          let v16: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
          let v17: Unit = call println(v16, v15)
          v17
        1 ->
          let v18: Dict[core/show.Show, String] = get_dict core/show.Show[String]
          let v19: Unit = call println(v18, "missing")
          v19
      }
    1 (v20: String) ->
      let v21: Dict[core/show.Show, String] = get_dict core/show.Show[String]
      let v22: Unit = call println(v21, v20)
      v22
  }
