crates/ir/tests/snapshots/lower_test__json__json_bool.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module json__json_bool

declare json_to_string: (Json) -> String
declare println: (Dict, m) -> Unit

fn main() -> Unit =
  let v0: ~Json = construct Json::JBool#1(true)
  let v1: String = call json_to_string(v0)
  let v2: Dict = get_dict Show[String]
  let v3: Unit = call println(v2, v1)
  let v5: ~Json = construct Json::JBool#1(false)
  let v6: String = call json_to_string(v5)
  let v4: Dict = get_dict Show[String]
  let v7: Unit = call println(v4, v6)
  v7
